<resources>
    <string name="app_name" translatable="false">Linguiz</string>
    <string name="title_home">Info</string>
    <string name="title_learn">Learn</string>
    <string name="title_test">Test</string>
    <string name="learn_start">START LEARNING SESSION</string>
    <string name="test_start">TAKE A TEST</string>
    <string name="level_a1" translatable="false">A1</string>
    <string name="level_a2" translatable="false">A2</string>
    <string name="level_b1" translatable="false">B1</string>
    <string name="level_b2" translatable="false">B2</string>
    <string name="level_c1" translatable="false">C1</string>
    <string name="level_c2" translatable="false">C2</string>
    <string name="back">BACK</string>
    <string name="select_level">Select difficulty level</string>
    <string name="correct_answer">Correct!</string>
    <string name="incorrect_answer">The correct answer is: </string>
    <string name="next_button">Next</string>
    <string name="overall_result">Number of correct answers:</string>
    <string name="result_icon_desc">icon</string>
    <string name="your_answer">Your answer:</string>
    <string name="greeting">Welcome to LINGUIZ!</string>
    <string name="app_desc_p1">
        The app designated to teach you Polish vocabulary in comfy way.
        Regardless of your Polish skill you will find Linguiz useful, because it covers all six language levels: from A1 up to C2.
    </string>
    <string name="app_desc_p2">
        There are two modes at your disposition: \'learn\' and \'test\', you can navigate to them through the bottom navigation bar.
        In both modes you have to guess a word meaning being provided four possible answers, while only one of them is correct.
        But they work differently:
    </string>
    <string name="app_desc_p3">
        After you choose an answer in the learn mode, you are being informed about the answer\'s correctness.
        You can skip questions by tapping \'next\' or shaking your phone.
        Every time you answer correctly or make mistake the app will remember this.
        In future learning sessions more problematic words will appear more frequently.
</string>
    <string name="app_desc_p4">"The test mode is similar to the learn mode with main difference - you can't skip questions, and you aren't able to see your result until the end of the test.\n    "</string>
    <string name="defaultLearnLength" translatable="false">10</string>
    <string name="question_skipped">Question was skipped.</string>
    <string name="question_number_learn">Number of questions in a learn session:</string>
    <string name="question_number_test">Number of questions in a test:</string>
</resources>
